[package]
name = "rstats-blocks"
version = "0.1.0"
authors = ["Young <cywhoyi@gmail.com>"]
edition = "2018"
description = "Ethereum JSON-RPC client."
homepage = "https://github.com/tomusdrw/rust-web3"
repository = "https://github.com/tomusdrw/rust-web3"
documentation = "https://docs.rs/web3"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
structopt = "0.2.10"
arrayvec = "0.5.0"
ethabi = "9.0.0"
ethereum-types = "0.8.0"
ethereum-transaction = "0.2.0"
ethsign = "0.7.3"
futures = "0.1.26"
jsonrpc-core = "14.0.0"
log = "0.4.6"
parity-crypto = "0.4.2"
parking_lot = "0.10.0"
rustc-hex = "2.0.1"
serde = { version = "1.0.90", features = ["derive"] }
serde_json = "1.0.39"
tokio-timer = "0.1"
url = "2.1.0"
base64 = "0.11.0"
derive_more = "0.99.1"
web3 = { git = "https://github.com/tomusdrw/rust-web3" }
