[package]
name = "rstats-blocks"
version = "0.1.0"
authors = ["Young <cywhoyi@gmail.com>"]
edition = "2018"
description = "Ethereum JSON-RPC client."
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
structopt = "0.2.10"
futures = "0.1.26"
web3 = { git = "https://github.com/tomusdrw/rust-web3" }
